[tool.poetry]
name = "ucwork-mlflow"
version = "0.1.0"
description = ""
authors = ["shintaro uchiyama <shintaro.a.uchiyama@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
mlflow = "^1.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
